# lala-online

./: .gitignore  Cargo.toml  README.md  build_lala.sh  package.json
client/: package-lock.json  package.json  vite.config.js
client/lala/: README.md
client/lala/src/: lib.rs  matrix.rs  parser.rs
client/src/: App.jsx  main.jsx  queries.js  validation.js
client/src/components/: App.jsx  AuthContext.jsx  CreateFile.jsx  Delete.jsx  Document.jsx  Documents.jsx  ErrorBar.jsx  ErrorModal.jsx  FileContext.jsx  Guide.jsx  Home.jsx  JoySidebar.jsx  Navbar.jsx  Notebook.jsx  Notebooks.jsx  PrivateRoute.jsx  Sidebar.jsx  SignOut.jsx  SocialSignIn.jsx
client/src/firebase/: AuthContext.jsx  FirebaseConfig.js  FirebaseFns.js
client/src/styles/: SignOut.css  guide.css  index.css
client/src/wasm/: lala_lib.js  lala_lib_bg.js  lala_lib_bg.wasm
lala/: .gitignore  Cargo.toml  package.json
lala/src/: commands.rs  interp.rs  lala.pest  lib.rs  main.rs  matrix.rs  parser.rs  testing.pest  types.rs
server/: .gitignore  package.json  resolvers.js  server.js  typeDefs.js  typedefs.graphql
server/config/: mongoCollections.js  settings.js
server/src/: data.js  validation.js
server/tasks/: seed.js
src/: interp.rs  lala.pest
