[package]
name = "lala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "lala_lib"
path = "src/lib.rs"


[[bin]]
name = "lala_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
pest = "2.7.7"
pest_derive = "2.7.7"
wasm-bindgen = "0.2.91"
